--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
- 
+# Git'in satır sonu davranışını belirle
+* text=auto eol=lf
+*.{cmd,[cC][mM][dD]} text eol=crlf
+*.{bat,[bB][aA][tT]} text eol=crlf 
