--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test:ab": "npx playwright test tests/ab-testing.test.js",
     "test:add-remove": "npx playwright test tests/add-remove-elements.test.js",
     "test:auth": "npx playwright test tests/basic-auth.test.js",
-    "test:images": "npx playwright test tests/broken-images.test.js"
+    "test:images": "npx playwright test tests/broken-images.test.js",
+    "test:dom": "npx playwright test tests/challenging-dom.test.js"
   },
   "devDependencies": {
     "@playwright/test": "^1.50.1"
