--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test:add-remove": "npx playwright test tests/add-remove-elements.test.js",
     "test:auth": "npx playwright test tests/basic-auth.test.js",
     "test:images": "npx playwright test tests/broken-images.test.js",
-    "test:dom": "npx playwright test tests/challenging-dom.test.js"
+    "test:dom": "npx playwright test tests/challenging-dom.test.js",
+    "test:checkbox": "npx playwright test tests/checkboxes.test.js"
   },
   "devDependencies": {
     "@playwright/test": "^1.50.1"
